# SimpleSocket

./: CMakeLists.txt  LICENSE.txt  README.md
examples/: CMakeLists.txt  simple_tcp_client.cpp  simple_tcp_server.cpp  simple_udp_client.cpp  simple_udp_server.cpp
include/: simple_socket.hpp
